# snecs_functions

./: .gitignore  README.md  setup.cfg  snecs_tables-metadata.json
snecs_functions/: __init__.py  snecs_functions.py  snecs_tables-metadata.json
tests/: test_for_readme.ipynb  test_snecs_functions.py
